# bch-xmr-swap

./: .gitignore  Cargo.toml  README.md
.trades/ongoing/: eXQBT0jL3e-client.json  eXQBT0jL3e-server.json  vlKFnqips8-client.json  vlKFnqips8-server.json
client/: Cargo.toml
client/src/: main.rs  recover.rs
flow/: Cargo.toml
flow/src/: main.rs
protocol/: Cargo.toml
protocol/src/: adaptor_signature.rs  alice.rs  bob.rs  lib.rs  persist.rs  protocol.rs  utils.rs
protocol/src/blockchain/: mod.rs  types.rs  xmr.rs
protocol/src/contract/: mod.rs
protocol/src/keys/: bitcoin.rs  macros.rs  mod.rs  my_monero.rs
protocol/src/keys/bitcoin/: address.rs  mod.rs
protocol/src/proof/: mod.rs
web-server/: Cargo.toml
web-server/src/: main.rs  trader.rs  utils.rs
