[workspace]
members = ["protocol"]



# [dependencies]
# conquer-once = "0.4.0"
# hex = "0.4.3"
# ecdsa_fun = { version = "0.9.0", default-features = false, features = [ "adaptor", "serde" ] }
# sha2 = "0.10"
# sigma_fun = { version = "0.6.0", default-features = false, features = [ "ed25519", "serde", "secp256k1", "alloc" ] }
# rand = "0.8"
# rand_chacha = "0.3"
# serde = { version = "1.0", features = ["derive"] }
# serde_json = "1.0"
# tokio = { version = "1", features = ["full"] }
# clap = "4.4.3"
# monero = "0.19.0"
# bitcoin_hashes = "0.13.0"
# derivative = "2.2.0"
