[package]
name = "protocol"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


[dependencies]
conquer-once = "0.4.0"
hex = { version = "0.4.3", features = ["serde"] }
ecdsa_fun = { version = "0.9.0", default-features = false, features = [
    "adaptor",
    "serde",
] }
sha2 = "0.10"
sigma_fun = { version = "0.6.0", default-features = false, features = [
    "ed25519",
    "serde",
    "secp256k1",
    "alloc",
] }
rand = "0.8"
rand_chacha = "0.3"
serde = { version = "1.0.188", features = ["derive"] }
serde_json = "1.0.107"
tokio = { version = "1.32.0", features = ["full"] }
monero = { version = "0.19.0", features = ["full", "serde"] }
bitcoin_hashes = "0.13.0"
derivative = "2.2.0"
bitcoincash = { version = "0.29.2", features = ["serde"] }
bech32 = "0.9.1"
hex-literal = "0.4.1"
monero-rpc = "0.4.0"
anyhow = "1.0.75"
